# llama3.cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  Sampler.h  Tensor.cpp  Tensor.h  Transformer.cpp  build.sh  debug.sh  export.py  layers.cpp  layers.h  main.cpp  make.sh  make_and_debug.sh  make_and_run.sh  rebuild.sh  rebuild_debug.sh  run.sh
llama3.cpp/: Basic.cpp  Basic.h  CMakeLists.txt  Layers.cpp  Layers.h  Logger.cpp  Logger.h  Sampler.cpp  Tensor.cpp  Tensor.h  Tokenizer.cpp  Tokenizer.h  Transformer.cpp  Transformer.h  layers.cpp  main.cpp
pyscripts/: export.py
